@@ -284,6 +284,7 @@
         <w>gameover</w>
         <w>homeworlds</w>
         <w>obliterator</w>
+        <w>perlin</w>
         <w>starships</w>
       </words>
     </dictionary>
